<resources>
    <string name="app_name">LightIT</string>

    <string name="enable_permission">Enable location permission</string>
    <string name="requires_permission">The application requires permission!</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="internet_connected">Connection restored</string>
    <string name="internet_not_available">No connection</string>


    <string name="internet_connection">Please, check your internet connection.</string>
    <string name="oops">Unfortunately!</string>
    <string name="restore">Restore</string>
    <string name="no_connection">No connection</string>
    <string name="connection">Connected</string>
    <string name="change_user">Change</string>
    <string name="ok">Ok</string>


    <string name="poor_internet_connection">Poor internet connection. Please, try again.</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="string_forgot_password"><u>Forgot your password?</u></string>

    <string name="review">Reviews</string>
    <string name="type_your_review">Type your review...</string>
    <string name="submit_review">Submit review</string>

    <string name="icon_url">https://smktesting.herokuapp.com/static/</string>

    <string name="rate">Rate: </string>
    <string name="comment">Comment: </string>
    <string name="autorization">Autorization</string>
    <string name="registration">Registration</string>
    <string name="empty_login_field_string">Field is empty</string>
    <string name="check_internet_connection_string">Please check your internet connection and try again.</string>

    <string name="empty_username_string">Login field is empty</string>
    <string name="empty_password_string">Password field is empty</string>
    <string name="empty_login_fields_string">Fields are empty</string>
    <string name="invalid_email_address">Your e-mail address is invalid.</string>
    <string name="not_found">User not found</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="you_should_sign">You should sign in first</string>
</resources>
